src/styles/index.css
body {
  min-height: 100vh;
}

.maincontainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 700px;
  width: 100%;
  position: relative;
  overflow: hidden;
  animation: var(--fadeIn);
}

.hero-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
}

.hero-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  top: -10px;
  left: 0;
}

.hero-title {
  color: var(--purple);
  font-size: 4.5rem;
  font-family: var(--Sf-Pro-Bold);
}

.hero-description {
  color: var(--primary-grey);
  font-size: 1.1rem;
  font-family: var(--Inter);
  line-height: 1.6em;
  width: 575px;
  margin-top: 30px;
  /* text-align: center; */
}

.navigation-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 100%;
  overflow: visible;
}

.featured-projects-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: 9.375rem;
  overflow: hidden;
  animation: var(--fadeIn);
}

.featured-projects {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  margin-top: 90px;
  width: 655px;
  gap: 10px;
}

.featured-projects-top {
  width: 600px;
}

.all-projects,
.all-posts {
  text-decoration: none;
}

.featured-projects-title {
  color: var(--purple);
  font-size: 2.5rem;
  font-family: var(--Sf-Pro-Bold);
  text-align: left;
}

.featured-projects-top p,
.blog-section-top p {
  color: var(--secondary-grey);
  font-size: 16px;
  font-family: var(--Inter);
  line-height: 1rem;
  letter-spacing: 0.023px;
  text-align: left;
  margin-top: 1.25rem;
  transition: var(--ease-in-out);
}

.featured-projects-top p:hover,
.blog-section-top p:hover {
  color: var(--primary-grey);
}

.project-link {
  text-decoration: none;
}

.project {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  width: 600px;
  height: 85px;
  padding: 0 1.75em 0 1.75em;
  gap: 30px;
  border-radius: 1rem;
  transition: var(--ease-in-out);
}

.project:hover {
  background-color: var(--hover-black);
}

.project-content {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.project-title {
  color: var(--primary-grey);
  font-size: 1.1rem;
  font-family: var(--Inter);
  line-height: 1.5em;
}

.project-description {
  color: var(--secondary-grey);
  font-size: 0.95rem;
  font-family: var(--Inter);
  line-height: 1.5em;
  letter-spacing: 0.023rem;
}

.learn-more {
  text-align: right;
}

.arrow {
  color: var(--secondary-grey);
  font-family: var(--Inter);
  cursor: pointer;
  transition: var(--ease-in-out);
}

.arrow:hover {
  color: var(--primary-grey);
}

.project-hr {
  width: 37em;
  border: var(--hr);
}

.blog-posts-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: 9.375rem;
  overflow: hidden;
  animation: var(--fadeIn);
}

.blog-posts {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  margin-top: 90px;
  width: 655px;
  gap: 10px;
}

.blog-section-top {
  width: 600px;
}

.blog-section-title {
  color: var(--purple);
  font-size: 2.5rem;
  font-family: var(--Sf-Pro-Bold);
  text-align: left;
}

.post-link {
  text-decoration: none;
}

.post {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  width: 600px;
  height: 85px;
  padding: 0 1.75em 0 1.75em;
  gap: 30px;
  border-radius: 1rem;
  transition: var(--ease-in-out);
}

.post:hover {
  background-color: var(--hover-black);
}

.blog-content {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.post-title {
  color: var(--primary-grey);
  font-size: 1.1rem;
  font-family: var(--Inter);
  line-height: 1.5em;
}

.published {
  color: var(--secondary-grey);
  font-size: 0.95rem;
  font-family: var(--Inter);
  line-height: 1.5em;
  letter-spacing: 0.023rem;
}

.read-more {
  text-align: right;
}

.arrow {
  color: var(--secondary-grey);
  font-family: var(--Sf-Pro-Bold);
  cursor: pointer;
  transition: var(--ease-in-out);
}

.blog-hr {
  width: 37em;
  border: var(--hr);
}

.footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: absolute;
  bottom: -200px;
  left: 0;
  right: 0;
}

.hr {
  width: 23rem;
  border: 1px solid var(--secondary-grey);
}

.copyrights {
  color: var(--secondary-grey);
  font-size: 0.8125rem;
  font-family: var(--Inter);
  animation: var(--fadeIn);
  margin-top: 1.25em;
  margin-bottom: 20px;
}

@media screen and (max-width: 700px) {
  .hero-description {
    width: 525px;
  }
}

@media screen and (max-width: 600px) {
  .hero-title {
    font-size: 3rem;
  }

  .hero-description {
    width: 425px;
  }
}

